--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Inter:ital,wght@0,100;0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
+$primary-color-blue: #2A2A86;
+
+
 * {
   margin: 0;
   padding: 0;
@@ -69,4 +72,15 @@
 
 .ant-layout-sider {
   background-color: #fff;
+}
+
+.ant-btn-primary {
+  color: #fff;
+  background: $primary-color-blue;
+  border-color: $primary-color-blue;
+  &:focus &:hover {
+    color: #fff;
+    background:$primary-color-blue;
+    border-color:$primary-color-blue;
+  }
 }
