--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -38,6 +38,14 @@ $primary-color-blue: #2A2A86;
   padding: 0 !important;
 }
 
+.font-weight-500 {
+  font-weight: 500;
+}
+
+.w-100 {
+  width: 100%;
+}
+
 .notfound{
   position: fixed;
   display: flex;
