--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -375,3 +375,113 @@ $primary-color-blue: #2A2A86;
     height: 100%;
   }
 }
+
+.row-info {
+  margin-top: 13px;
+  img {
+    width: 15px;
+  }
+}
+
+.receive-at-store {
+  .row-info-title {
+    min-width: 70px;
+  }
+}
+
+.ant-popover-title {
+  padding: 0;
+  .change-shipping-address-title {
+    background: #EFF1FF;
+    padding: 10px 20px;
+  }
+}
+
+.ant-popover-inner-content {
+  padding: 0;
+  .change-shipping-address-content {
+    width: 600px;
+    .shipping-address-row {
+      padding: 15px 20px;
+      border-bottom: 1px solid #eee;
+      button {
+        height: auto;
+      }
+      &>div:not(.shipping-address-name) {
+        margin-top: 5px;
+      }
+    }
+  }
+}
+
+.ant-modal-header {
+  background: rgba(239, 241, 255, .4);
+  color: #4F687D;
+  font-weight: 500;
+}
+
+.ant-modal-footer {
+  border: 0;
+  padding-bottom: 20px;
+  .ant-btn {
+    font-weight: 500;
+    padding: 8px 15px;
+    min-width: 90px;
+    border-radius: 6px;
+    height: auto;
+  }
+}
+
+.update-shipping {
+  min-width: 600px;
+}
+
+.ant-input-number {
+  border: 0;
+  .ant-input-number-input {
+    height: auto;
+    border: 1px solid #CFDCE9;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    padding: 6px 11px;
+    //text-align: right;
+  }
+}
+
+//.ant-input-number-input::placeholder {
+//  text-align: left;
+//}
+
+.sale-product-box-payment {
+  margin-top: 19px;
+  button {
+    height: auto;
+  }
+  .payment-row {
+    margin-top: 15px;
+  }
+}
+
+.badge-style {
+  padding: 2px 10px;
+  border-radius: 20px;
+}
+
+.badge-danger {
+  background: rgba(226, 67, 67, 0.1);
+  color: #E24343;
+  button {
+    color: #E24343;
+    margin-left: 5px;
+  }
+}
+
+.badge-primary {
+  background: rgba(0, 128, 255, 0.1);
+  color: #0080FF;
+  button {
+    color: #0080FF;
+    margin-left: 5px;
+  }
+}
