--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -137,6 +137,9 @@ $desktop-width: 1400px;
 
 .ant-layout-sider {
   background-color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 10;
   @include mobile {
     display: none;
   }
