--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -137,6 +137,7 @@ $desktop-width: 1400px;
 
 .ant-layout-sider {
   background-color: #fff;
+  position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
   z-index: 10;
