--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -250,10 +250,19 @@ $desktop-width: 1400px;
   }
 }
 
-.ant-steps-item {
-  .ant-steps-item-title {
-    font-size: 12px;
+.ant-steps {
+  @include mobile {
+    display: none;
   }
+  .ant-steps-item {
+    .ant-steps-item-title {
+      font-size: 12px;
+    }
+  }
+}
+
+.ant-card-head-wrapper {
+  flex-wrap: wrap;
 }
 
 .card-block {
@@ -269,6 +278,11 @@ $desktop-width: 1400px;
     label {
       margin-right: 10px;
       font-size: 13px;
+    }
+    .ant-space {
+      @include mobile {
+        flex-wrap: wrap;
+      }
     }
   }
 }
@@ -391,12 +405,30 @@ $desktop-width: 1400px;
     padding: 3px 8px;
     border-radius: 10px;
   }
+  .ant-space {
+    @include mobile {
+      width: 100%;
+      margin-top: 10px;
+    }
+  }
 }
 
 .sale-online-product {
-  .ant-space-item {
-    height: 100%;
+  .ant-card-extra {
+    .ant-space-item {
+      height: 100%;
+      @include mobile {
+        height: auto;
+      }
+    }
+    .view-inventory-box {
+      margin-left: 20px;
+      @include mobile {
+        margin-left: 0;
+      }
+    }
   }
+
 }
 
 .row-info {
@@ -523,4 +555,10 @@ $desktop-width: 1400px;
 
 .update-customer-modal {
   min-width: 800px;
+}
+
+.ant-table-content {
+  @include mobile {
+    overflow: auto;
+  }
 }
