--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -216,6 +216,20 @@ $desktop-width: 1400px;
   }
 }
 
+.main-content {
+  padding: 5px 30px;
+  @include mobile {
+    padding: 5px 10px;
+  }
+}
+
+
+.main-content {
+  padding: 5px 30px;
+  @include mobile {
+    padding: 5px 10px;
+  }
+}
 
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
   background-color: #F3F3F7;
