--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -405,6 +405,9 @@ $desktop-width: 1400px;
       height: auto !important;
     }
   }
+  .ip-search {
+    padding: 7px 11px;
+  }
 }
 
 .form-group-with-search {
