--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -627,3 +627,43 @@ $desktop-width: 1400px;
   margin: 10px 0;
 }
 
+.row-filter {
+  display: flex;
+  flex-direction: row;
+  margin: 0 20px;
+  .key-filter {
+    background: #F4F4F7;
+    border-radius: 3px;
+    display: flex;
+    padding: 6px 8px;
+    align-items: center;
+    margin-left: 5px;
+    span {
+      font-family: Inter;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 15px;
+      color: #404040;
+    }
+    .btn-del {
+      width: 14px;
+      height: 14px;
+      background: none;
+      border: none;
+      border-radius: 50%;
+      margin-left: 8px;
+      display: flex;
+    }
+    .ant-btn-icon-only>*{
+      font-size: 12px;
+    }
+  }
+  .del-all {
+    margin-left: 8px;
+    background: rgba(255, 166, 0, 0.1);
+    color: rgba(255, 166, 0, 1);
+    border-radius: 3px;
+    border: none;
+  }
+}
