add empty table

--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -667,3 +667,54 @@ $desktop-width: 1400px;
     border: none;
   }
 }
+
+.title-rule {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 33px 0;
+  .title {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    color: #61778A;
+  }
+  .rule {
+    height: 1px;
+    margin-left: 12px;
+    width: calc(100% - 119px);
+    background-color: #CFDCE9;;
+  }
+}
+.view-other {
+  margin-top: 18px;
+  border: none;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 1px #eee;
+  background-color: white;
+  .ant-collapse-header {
+    min-height: 48px;
+    margin-bottom: -1px;
+    padding: 0 24px;
+    color: rgba(0,0,0,.85);
+    font-weight: 500;
+    font-size: 16px;
+    background: transparent;
+    border-bottom: 1px solid #f0f0f0;
+    border-radius: 2px 2px 0 0;
+  }
+}
+
+.v-extra {
+  .ant-form-item {
+    margin: 0 16px;
+    .ant-form-item-control-input-content {
+      display: inline;
+    }
+  }
+  .t-status {
+
+  }
+}
