--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -644,6 +644,8 @@ $desktop-width: 1400px;
     align-items: center;
     padding: 6px 11px;
     //text-align: right;
+    border-radius: unset;
+    height: 32px;
   }
 }
 
