--- a/src/component/container/container.styles.scss
+++ b/src/component/container/container.styles.scss
@@ -875,3 +875,50 @@ table {
     background-color: #27AE60;
   }
 }
+
+.upload-v {
+  width: 150px;
+  height: 150px;
+  .upload-view {
+    background: rgba(79, 104, 125, 0.1);
+    border: 2px dashed #CFDCE9;
+    width: 150px;
+    height: 150px;
+    border-radius: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    img {
+      width: 30px;
+      height: 30px;
+      position: absolute;
+    }
+    .img-upload {
+      display: none;
+    }
+    .img-default {
+      display: inline;
+    }
+    &:hover {
+      .img-upload {
+        display: inline;
+      }
+      .img-default {
+        display: none;
+      }
+    }
+  }
+}
+
+.upload-bottom {
+  width:  150px;
+  margin-top: 12px;
+  text-align: center;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: rgba(79, 104, 125, 0.9);
+}
