--- a/src/assets/css/v2/_variable.scss
+++ b/src/assets/css/v2/_variable.scss
@@ -14,3 +14,24 @@ $border-color: #DFDFDF;
 $border-secondary-color: #7B61FF;
 $border-radius: 6px;
 $font-size: 14px;
+
+$mobile-width: 991px;
+$tablet-width: 992px;
+$desktop-width: 1400px;
+
+@mixin mobile {
+  @media (max-width: #{$mobile-width}) {
+    @content;
+  }
+}
+
+@mixin tablet { @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
+  @content;
+}
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
