--- a/src/assets/css/v2/app.scss
+++ b/src/assets/css/v2/app.scss
@@ -53,6 +53,7 @@
       border-radius: 50%;
       background-color: $white;
       cursor: pointer;
+      box-shadow: 0 0 2px 1px #eee;
     }
   }
 
