--- a/src/assets/css/v2/_overwrite.scss
+++ b/src/assets/css/v2/_overwrite.scss
@@ -532,6 +532,7 @@
           color: $label-color;
 
           .ant-form-item-tooltip{
+            cursor: pointer;
             color: #2D9CDB;
           }
 
