--- a/src/assets/css/v2/_page-header.scss
+++ b/src/assets/css/v2/_page-header.scss
@@ -37,7 +37,7 @@
           }
 
           &:last-child{
-            .ant-breadcrumb-link{
+            .ant-breadcrumb-link, a{
               color: $primary-color;
             }
           }
