--- a/src/assets/css/v2/_variable.scss
+++ b/src/assets/css/v2/_variable.scss
@@ -14,6 +14,8 @@ $border-color: #DFDFDF;
 $border-secondary-color: #7B61FF;
 $border-radius: 6px;
 $font-size: 14px;
+$font-size-medium: 18px;
+$font-size-large: 20px;
 
 $mobile-width: 991px;
 $tablet-width: 992px;
