--- a/src/assets/css/v2/_overwrite.scss
+++ b/src/assets/css/v2/_overwrite.scss
@@ -287,6 +287,7 @@
 
     &-body{
       height: auto;
+      opacity: 1;
       padding: 0;
       transition: all .2s;
     }
@@ -593,6 +594,23 @@
         background-color: inherit;
       }
     }
+    @for $i from 1 through 5 {
+      .ant-table-row-level-#{$i} {
+        .ant-table-cell-with-append{
+          .text-indent{
+            padding-left: $i * 15px;
+          }
+        }
+      }
+    }
+
+    .ant-table-cell-with-append{
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: flex-end;
+      align-items: center;
+
+    }
   }
 
   //Pagination
@@ -618,6 +636,7 @@
             &-link{
               border-color: transparent;
               background-color: rgba($primary-color, 0.05);
+              color: $primary-color;
             }
           }
         }
@@ -639,10 +658,16 @@
 
       &:hover{
         background-color: rgba($primary-color, 0.05);
+        a {
+          color: $primary-color !important;
+        }
       }
 
       &-active{
         background-color: rgba($primary-color, 0.05);
+        a {
+          color: $primary-color !important;
+        }
       }
       
       a {
@@ -656,6 +681,30 @@
 
     &-header{
       border-radius: 5px 5px 0 0;
+      &-nostyle{
+        .ant-modal{
+          &-header{
+            border-bottom: 0;
+          }
+          &-title{
+            position: relative;
+            padding-left: 10px;
+            font-size: $font-size-large;
+
+            &::after{
+              content: '';
+              position: absolute;
+              width: 3px;
+              height: 100%;
+              background-color: #EB5757;
+              left: 0;
+            }
+          }
+          &-footer{
+            background-color: #FBFBFF;
+          }
+        }
+      }
     }
 
     &-content{
@@ -697,8 +746,107 @@
     .ant-divider-inner-text{
       padding-left: 0 !important;
     }
+    &-primary{
+      .ant-divider-inner-text{
+        color: $primary-color;
+      }
+    }
   }
 
+  //Tabs
+  &-tabs{
+    border-radius: $border-radius;
+    // background-color: $white;
+    
+    & > &-nav{
+      margin-bottom: 0;
+    }
+    
+    &-nav{
+      padding: 10px;
+      padding-bottom: 0;
+      margin-bottom: 0;
+      background-color: $white;
+      
+      &::before{
+        border-width: 2px !important;
+      }
+    }
+
+    &-tab{
+      padding: 12px 20px;
+      &.ant-tabs-tab-active .ant-tabs-tab-btn{
+        color: $primary-color;
+      }
+
+      &:hover{
+        color: $primary-color;
+      }
+    }
+
+    &-ink-bar{
+      background-color: $primary-color;
+      border-radius: 2px;
+    }
+  }
+
+  //Checkbox
+  &-checkbox{
+    &-checked{
+
+      &::after{
+        border-color: $primary-color;
+      }
+
+      .ant-checkbox-inner{
+        background-color: $primary-color;
+        border-color: $primary-color;
+      }
+
+    }
+
+    &-indeterminate{
+      .ant-checkbox-inner::after {
+        height: 2px;
+        background-color: $white;
+      }
+    }
+  }
+
+  //Collapse
+  &-collapse{
+    &-card{
+      border: 0;
+      background-color: $white;
+      border-radius: $border-radius;
+
+      & > .ant-collapse-item{
+        border-radius: 0 0 $border-radius $border-radius;
+        border-bottom: 0;
+      }
+
+      .ant-collapse-item {
+        .ant-collapse-header{
+          font-size: 16px;
+          font-weight: 500;
+          padding-left: 24px;
+        }
+
+        &:last-child{
+          .ant-collapse-content{
+            border-radius: 0 0 $border-radius $border-radius;
+          }
+        }
+        .ant-collapse-content{
+          border-top-color: #f0f0f0;
+        }
+      }
+    }
+  }
+}
+
+.ant-checkbox-input:focus + .ant-checkbox-inner, .ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner{
+  border-color: $primary-color;
 }
 
 .ant-input-group.ant-input-group-compact > .ant-cascader-picker:first-child .ant-input, .ant-input-group.ant-input-group-compact > .ant-select-auto-complete:first-child .ant-input, .ant-input-group.ant-input-group-compact > .ant-select:first-child > .ant-select-selector, .ant-input-group.ant-input-group-compact > :first-child {
