--- a/src/assets/css/v1/index.scss
+++ b/src/assets/css/v1/index.scss
@@ -154,6 +154,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 10;
+  box-shadow: 0 0 2px 1px #eee;
   @include mobile {
     //display: none;
     position: fixed;
