--- a/src/assets/css/v2/app.scss
+++ b/src/assets/css/v2/app.scss
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500;600;700&display=swap');
 @import "variable";
 @import "overwrite";
 
 #root {
   width: 100%;
   height: 100%;
+  font-family: 'Inter', sans-serif;
+}
+
+*{
+  font-family: 'Inter', sans-serif;
 }
 
 .ant-layout-sider-collapsed {
