--- a/src/assets/css/v2/_sale-order.scss
+++ b/src/assets/css/v2/_sale-order.scss
@@ -472,3 +472,13 @@ input {
 .font-size-text{
   font-size: 16px;
 }
+
+.row-info-icon{
+  margin: 3px 10px 15px 0px;
+  align-items: center;
+}
+
+.row-info-title{
+  min-width: 20px;
+  margin-top: -7px;
+}
