--- a/src/assets/css/v2/_overwrite.scss
+++ b/src/assets/css/v2/_overwrite.scss
@@ -176,7 +176,7 @@
   //Button
   &-btn{
     border-radius: $border-radius;
-    height: 42px;
+    height: 38px;
     padding: 6px 20px;
     font-weight: 500;
     color: $primary-color;
@@ -324,7 +324,7 @@
       .ant-select{
 
         &-selector{
-          height: 38px;
+          min-height: 38px;
           border-radius: $border-radius;
           padding: 0 14px;
 
@@ -464,7 +464,7 @@
       }
 
       & > input.ant-input{
-        height: 38px;
+        height: 36px;
         padding: 4px 14px;
       }
       & > .ant-input-prefix + input.ant-input{
