--- a/src/assets/css/v2/_page-header.scss
+++ b/src/assets/css/v2/_page-header.scss
@@ -3,9 +3,10 @@
   height: 90px;
   top: 0;
   right: 0;
-  left: 270px;
+  left: 255px;
   background: $background-color;
-  padding: 18px 20px;
+  padding: 18px 0px;
+  margin: 0 20px;
   z-index: 1000;
   transition: all .2s;
   
