--- a/src/assets/css/v2/_sale-order.scss
+++ b/src/assets/css/v2/_sale-order.scss
@@ -8,6 +8,15 @@
   margin-bottom: 15px;
   font-size: 14px;
 }
+.ant-btn-outline {
+  background-color: transparent;
+  color: #2a2a86;
+}
+
+.text-right{
+  text-align: right;
+}
+
 
 .ant-input-search .ant-input-group .ant-input-affix-wrapper:not(:last-child) {
   border-top-left-radius: 5px;
@@ -465,20 +474,20 @@ input {
   background-color: rgba(226, 67, 67, 0.1);
 }
 
-.font-weight-500{
+.font-weight-500 {
   font-weight: 500;
 }
 
-.font-size-text{
+.font-size-text {
   font-size: 16px;
 }
 
-.row-info-icon{
+.row-info-icon {
   margin: 3px 10px 15px 0px;
   align-items: center;
 }
 
-.row-info-title{
+.row-info-title {
   min-width: 20px;
   margin-top: -7px;
 }
