--- a/src/assets/css/v2/app.scss
+++ b/src/assets/css/v2/app.scss
@@ -191,6 +191,7 @@ label {
 @import "select";
 @import "editor";
 @import "product";
+@import "modal-confirm";
 .display {
     &-block {
         display: block;
