--- a/src/assets/css/v2/_sale-order.scss
+++ b/src/assets/css/v2/_sale-order.scss
@@ -556,3 +556,13 @@ input {
 .ant-modal-content {
     width: 700px;
 }
+
+.ant-table-footer {
+    padding: 15px 20px 30px 20px;
+    color: rgba(0,0,0,.85);
+    background:#F4F4F7;;
+}
+
+.ant-table-thead{
+    background-color: #F4F4F7;
+}
