--- a/src/assets/css/v2/_sale-order.scss
+++ b/src/assets/css/v2/_sale-order.scss
@@ -25,7 +25,7 @@
 .search-layout {
     padding: 0;
     box-shadow: 0px 0px 6px rgba(118, 133, 146, 0.6);
-    border-radius: 3px;
+    border-radius: 5px;
 
     .ant-select-item {
         padding: 0;
@@ -599,6 +599,7 @@ input {
 }
 
 .ant-input-number-input-wrap {
+    border-radius: 5px;
     & > input {
         height: 36px;
     }
@@ -611,4 +612,10 @@ input {
 
 .ant-table-thead {
     background-color: #f4f4f7;
+}
+
+.ant-col .ant-form-item-control{
+    input{
+        border-radius: 5px;
+    }
 }
